<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/generate_pdf_bitmap"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/img"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/generate_pdf_bitmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/select_file"
        android:layout_centerHorizontal="true"
        android:text="@string/bitmap_of_pdf"
        android:textSize="20sp" />

    <Button
        android:id="@+id/select_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/black"
        android:text="@string/select_file" />

    <TextView
        android:id="@+id/thumbnail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_file"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/thumbnail_of_youtube_video"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/youtube_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thumbnail_text"
        android:hint="@string/youtube_link"
        android:inputType="textUri"
        android:textAlignment="center"
        android:textSize="15sp" />

    <Button
        android:id="@+id/generate_thumbnail_for_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/youtube_link"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/black"
        android:text="@string/generate_thumbnail" />

    <TextView
        android:id="@+id/thumbnail_of_vdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/generate_thumbnail_for_youtube"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/thumbnail_of_video"
        android:textSize="20sp" />

    <Button
        android:id="@+id/select_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thumbnail_of_vdo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/black"
        android:text="@string/select_video" />


<!--    <Button-->
<!--        android:id="@+id/btnVideoThumbnailFromUri"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="150dp"-->
<!--        android:text="Video Thumbnail\nfrom Storage"-->
<!--        android:textAllCaps="false"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:layout_marginStart="16dp"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->
<!--    <Button-->
<!--        android:id="@+id/btnVideoThumbnailFromUrl"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="152dp"-->
<!--        android:text="Video Thumbnail\nfrom URL"-->
<!--        android:textAllCaps="false"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:layout_marginStart="16dp"-->
<!--        app:layout_constraintStart_toEndOf="@id/btnVideoThumbnailFromUri" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imgThumbnail"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</RelativeLayout>
