<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BitmapYoutube">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/bitmap_from_youtube"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/img"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/thumbnail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/thumbnail_of_youtube_video"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/youtube_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/youtube_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thumbnail_text"
        android:hint="@string/youtube_link"
        android:inputType="textUri"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/generate_thumbnail_for_youtube"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/generate_thumbnail_for_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/youtube_link"
        android:layout_centerInParent="true"
        android:text="@string/generate_thumbnail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="200dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>